--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+      implementation 'com.google.firebase:firebase-analytics:17.3.0'
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0") 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
